--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,5 +4,5 @@ metadata:
 components:
   - name: tools
     container:
-      image: quay.io/pittar/devspaces31-jbang:latest
+      image: quay.io/pittar/devspaces31-jbang:test
       memoryLimit: 3Gi
