--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,5 +4,5 @@ metadata:
 components:
   - name: tools
     container:
-      image: quay.io/pittar/devspaces31-jbang:test2
+      image: quay.io/devfile/universal-developer-image:ubi8-f5ffca8
       memoryLimit: 3Gi
